--- a/non-graded ex 3.ipynb
+++ b/non-graded ex 3.ipynb
@@ -24,18 +24,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the treasure hunt! The grid size is 5x5.\n",
+      "Your starting position is [3, 0]. You have 10 moves to find the treasure.\n",
+      ". . . P . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . T \n",
+      ". . . . . \n",
+      "\n",
+      "\n",
+      ". . . . . \n",
+      ". . . P . \n",
+      ". . . . . \n",
+      ". . . . T \n",
+      ". . . . . \n",
+      "\n",
+      "\n",
+      "You are getting closer to the treasure.\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . P . \n",
+      ". . . . T \n",
+      ". . . . . \n",
+      "\n",
+      "\n",
+      "You are getting closer to the treasure.\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . P T \n",
+      ". . . . . \n",
+      "\n",
+      "\n",
+      "You are getting closer to the treasure.\n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . . \n",
+      ". . . . P \n",
+      ". . . . . \n",
+      "\n",
+      "\n",
+      "Congratulations! You found the treasure at [4, 3] in 4 moves!\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
+    "def main():\n",
+    "    grid_size = 5  # Define the size of the grid\n",
+    "    max_moves = 10  # Maximum allowed moves\n",
+    "    player_position = [random.randint(0, grid_size - 1), random.randint(0, grid_size - 1)]\n",
+    "    treasure_position = [random.randint(0, grid_size - 1), random.randint(0, grid_size - 1)]\n",
+    "    moves_count = 0\n",
     "\n",
+    "    print(f\"Welcome to the treasure hunt! The grid size is {grid_size}x{grid_size}.\")\n",
+    "    print(f\"Your starting position is {player_position}. You have {max_moves} moves to find the treasure.\")\n",
     "\n",
-    "player_position = [random.randint(0, grid_size - 1), random.randint(0, grid_size - 1)]\n",
-    "print(player_position)\n",
-    "treasure_position = #Same logic as above\n",
-    "\n"
+    "    def print_grid(p_position):\n",
+    "        for y in range(grid_size):\n",
+    "            row = \"\"\n",
+    "            for x in range(grid_size):\n",
+    "                if [x, y] == p_position:\n",
+    "                    row += \"P \"\n",
+    "                elif [x, y] == treasure_position:\n",
+    "                    row += \"T \"  # This would not normally be displayed, it's just for checking\n",
+    "                else:\n",
+    "                    row += \". \"\n",
+    "            print(row)\n",
+    "        print(\"\\n\")\n",
+    "\n",
+    "    print_grid(player_position)\n",
+    "    previous_distance = abs(player_position[0] - treasure_position[0]) + abs(player_position[1] - treasure_position[1])\n",
+    "\n",
+    "    while moves_count < max_moves:\n",
+    "        move = input(\"Enter move (N, S, E, W): \").strip().upper()\n",
+    "        if move not in [\"N\", \"S\", \"E\", \"W\"]:\n",
+    "            print(\"Invalid move. Please enter only N, S, E, or W.\")\n",
+    "            continue\n",
+    "\n",
+    "        new_position = player_position.copy()\n",
+    "        if move == 'N':\n",
+    "            new_position[1] -= 1\n",
+    "        elif move == 'S':\n",
+    "            new_position[1] += 1\n",
+    "        elif move == 'E':\n",
+    "            new_position[0] += 1\n",
+    "        elif move == 'W':\n",
+    "            new_position[0] -= 1\n",
+    "\n",
+    "        if new_position[0] < 0 or new_position[0] >= grid_size or new_position[1] < 0 or new_position[1] >= grid_size:\n",
+    "            print(\"Move not allowed. You are trying to move outside the grid.\")\n",
+    "            continue\n",
+    "\n",
+    "        player_position = new_position\n",
+    "        moves_count += 1\n",
+    "        current_distance = abs(player_position[0] - treasure_position[0]) + abs(player_position[1] - treasure_position[1])\n",
+    "\n",
+    "        print_grid(player_position)\n",
+    "\n",
+    "        if player_position == treasure_position:\n",
+    "            print(f\"Congratulations! You found the treasure at {player_position} in {moves_count} moves!\")\n",
+    "            break\n",
+    "        elif current_distance < previous_distance:\n",
+    "            print(\"You are getting closer to the treasure.\")\n",
+    "        else:\n",
+    "            print(\"You are moving farther from the treasure.\")\n",
+    "\n",
+    "        previous_distance = current_distance\n",
+    "\n",
+    "        if moves_count == max_moves:\n",
+    "            print(f\"No more moves left. You lost! The treasure was at {treasure_position}.\")\n",
+    "            break\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
@@ -55,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
